0-3_AI_Evaluation_Engine/설계문서_V7.0/V28/instructions/3_evaluate/cat06_accountability.md
# Category 06: Accountability (책임성) - 평가 지침서 V28

---

## 1. 카테고리 정의

### 한글 정의
맡은 직무와 약속에 대해 책임지는 자질

### 영문 정의
The quality of taking responsibility for assigned duties and promises

### 학술 근거
- **Bovens (2010)**: 공적 책임성의 3요소
- **Mulgan (2000)**: 민주적 책임성 이론
- **Schedler (1999)**: 책임성의 두 축

---

## 2. 평가 범위

### [O] 책임성에 해당
- 공약 이행률
- 약속 준수
- 직무 충실성
- 출석률/참여율
- 결과에 대한 책임
- 실패 인정 및 사과
- 후속 조치 이행
- 정책 연속성

### [X] 책임성 아님 (다른 카테고리)
- 정책 능력 → 카테고리 1 (전문성)
- 조직 관리 → 카테고리 2 (리더십)
- 금전적 비리 → 카테고리 4 (청렴성)

---

## 3. 등급 체계 (+4 ~ -4) - V28

**숫자 기반 명확한 기준**

| 등급 | 점수(×2) | 객관적 기준 |
|------|----------|-------------|
| **+4** | +8 | 탁월 - 공약 이행률 90% 이상, 책임감 모범 |
| **+3** | +6 | 우수 - 공약 대부분 이행 (70-89%), 출석률 우수 |
| **+2** | +4 | 양호 - 공약 이행 노력 (50-69%), 직무 충실 |
| **+1** | +2 | 경미한 긍정 - 기본적인 책임 이행 |
| **-1** | -2 | 경미한 부정 - 일부 공약 미이행, 책임 회피 경향 |
| **-2** | -4 | 일반 부정 - 공약 이행률 저조 (30% 미만) |
| **-3** | -6 | 심각한 부정 - 심각한 무책임, 공약 대부분 파기 |
| **-4** | -8 | 최악 - 직무 유기 수준, 공약 완전 파기 |

---

## 4. 등급 판단 세부 기준

### +4등급 (탁월함)
- 공약 이행률 90% 이상
- 출석률 95% 이상
- 책임감 있는 리더로 인정
- 실패 시에도 책임지는 자세

### +3등급 (우수함)
- 공약 대부분 이행 (70-89%)
- 출석률 우수 (90% 이상)
- 직무에 충실
- 후속 조치 이행

### +2등급 (양호함)
- 공약 이행 노력 확인 (50-69%)
- 출석률 양호 (80% 이상)
- 기본적인 책임감
- 큰 문제 없음

### +1등급 (경미한 긍정)
- 기본적인 책임 이행
- 평균 수준의 공약 이행
- 특별한 문제 없음
- 무난한 평가

### -1등급 (경미한 부정)
- 일부 공약 미이행
- 출석률 저조한 경우 있음
- 책임 회피 경향
- 개선 필요

### -2등급 (일반 부정)
- 공약 이행률 저조 (30% 미만)
- 출석률 문제
- 무책임 비판
- 직무 태만 지적

### -3등급 (심각한 부정)
- 심각한 무책임
- 공약 대부분 파기
- 직무 유기 수준
- 다수의 비판

### -4등급 (최악)
- 직무 유기 확정
- 공약 완전 파기
- 책임 완전 회피
- 정치인 부적합

---

## 5. 평가 프로세스

### 입력 데이터
```
50개 (자기가 수집한 데이터) 데이터 (책임성 카테고리)
```

### 평가 방법
1. 50개 데이터 전체 검토
2. 각 데이터별 등급(+4 ~ -4) 부여
3. rating 필드에 숫자 문자열 기록 (예: "+3", "-2")

---

## 6. V28 기간 제한

### OFFICIAL 데이터: 최근 4년
```
유효 기간: 2022-01-07 ~ 2026-01-07
```

### PUBLIC 데이터: 최근 2년
```
유효 기간: 2024-01-11 ~ 2026-01-07
```

---

## 7. 주의사항 (Pitfalls)

1. **환경 변화 고려**: 외부 요인으로 공약 수정 불가피한 경우
2. **정량/정성 구분**: 이행률 수치와 질적 성과 함께
3. **대안 제시**: 불이행 시 대안 제시 여부
4. **출석률 맥락**: 해외 출장 등 정당한 사유

---

## 8. JSON 출력 형식

```json
{
  "items": [
    {
      "item_num": 1,
      "data_title": "간결한 제목",
      "data_content": "구체적 내용",
      "data_source": "출처명",
      "source_url": "https://...",
      "source_type": "OFFICIAL",
      "data_date": "2025-06-15",
      "rating": "+3"
    }
  ]
}
```

**핵심: rating 필드에 +4 ~ -4 숫자 문자열 기록!**
**예시: "+4", "+3", "+2", "+1", "-1", "-2", "-3", "-4"**

---

## 9. 체크리스트

- [ ] 50개 데이터 전체 평가
- [ ] 각 데이터에 rating(+4 ~ -4) 부여
- [ ] 등급 기준에 따른 일관된 평가
- [ ] 공약 이행률 수치 확인
- [ ] 환경 변화 맥락 고려
- [ ] rating은 숫자 문자열 (예: "+3", "-2")

---

**V28 책임성 평가 지침서 끝**
