0-3_AI_Evaluation_Engine/설계문서_V7.0/V30/instructions/3_evaluate/cat06_accountability.md
# Category 06: Accountability (책임성) - 평가 지침서 V30

---

## 1. 카테고리 정의

### 한글 정의
맡은 직무와 약속에 대해 책임지는 자질

### 영문 정의
The quality of taking responsibility for assigned duties and promises

### 학술 근거
- **Bovens (2010)**: 공적 책임성의 3요소
- **Mulgan (2000)**: 민주적 책임성 이론
- **Schedler (1999)**: 책임성의 두 축


## 2. V30 평가 방식 - 풀링 평가

### 평가 대상 데이터

```
100개 풀링 데이터 (3개 AI가 수집한 전체 데이터)

┌──────────────────────────────────────┐
│ Gemini    수집: 60개                 │
│ Perplexity 수집: 30개                │
│ Grok       수집: 10개                │
├──────────────────────────────────────┤
│ 풀링 합계: 100개                     │
└──────────────────────────────────────┘

4개 평가 AI (Claude, ChatGPT, Gemini, Grok)가
각각 100개 전체 데이터를 독립적으로 평가

⚠️ Perplexity = 평가 제외 (수집만 담당)
```

### 평가 독립성

```
타이밍 분리 = 객관성 보장

[수집 단계]
→ Gemini, Perplexity, Grok이 데이터 수집
→ collected_data_v30 테이블에 저장

[평가 단계] - 다른 세션, 다른 시점
→ Claude, ChatGPT, Gemini, Grok이 평가
→ 수집 시점 ≠ 평가 시점
→ 독립적 판단 = 더 객관적
```

---

## 3. 평가 범위 - 구체적 10개 항목 기준

### 🎯 책임감 = 📋 공약 이행/의정활동/성실한 직무 수행!

⚠️ **아래 10개 항목을 기준으로 평가하세요.**

### ✅ [O] 책임감 평가 기준 10개 항목

| # | 항목명 | 설명 |
|---|--------|------|
| 6-1 | **공약 이행률** | (완료 공약/총 공약) × 100 |
| 6-2 | **회의 출석률** | 본회의, 위원회 출석률 |
| 6-3 | **예산 집행률** | (집행액/확정 예산) × 100 |
| 6-4 | **감사 지적 개선** | 감사 지적 개선 완료율 |
| 6-5 | **매니페스토 평가 등급** | 공약 이행 평가 등급 |
| 6-6 | **의정 활동 보고 빈도** | 정기적 활동 보고 |
| 6-7 | **시민단체 의정 감시 평가** | 참여연대 등 평가 점수 |
| 6-8 | **직무 수행 관련 보도** | 직무 수행 키워드 보도 |
| 6-9 | **책임 이행 관련 보도** | 책임 이행 키워드 보도 |
| 6-10 | **사후 책임 이행** | 실패 인정, 개선 약속 이행 |

💡 **이 10개 항목 외의 내용은 다른 카테고리입니다!**

### ❌ [X] 책임감 아님 - 다른 카테고리

```
❌ 비리, 부패 → 청렴성 (4)
❌ 폭언, 품위손상 → 윤리성 (5)
❌ 정보 비공개 → 투명성 (7)
❌ 민원 대응 → 대응성 (9)
```

---

## 4. 등급 체계 (+4 ~ -4) - V30

**숫자 기반 명확한 기준**

| 등급 | 점수(×2) | 객관적 기준 |
|------|----------|-------------|
| **+4** | +8 | 탁월 - 공약 이행률 90% 이상, 책임감 모범 |
| **+3** | +6 | 우수 - 공약 대부분 이행 (70-89%), 출석률 우수 |
| **+2** | +4 | 양호 - 공약 이행 노력 (50-69%), 직무 충실 |
| **+1** | +2 | 경미한 긍정 - 기본적인 책임 이행 |
| **0** | 0 | 중립 - 긍정/부정 판단 불가, 정보 부족 또는 중립적 |
| **-1** | -2 | 경미한 부정 - 일부 공약 미이행, 책임 회피 경향 |
| **-2** | -4 | 일반 부정 - 공약 이행률 저조 (30% 미만) |
| **-3** | -6 | 심각한 부정 - 심각한 무책임, 공약 대부분 파기 |
| **-4** | -8 | 최악 - 직무 유기 수준, 공약 완전 파기 |

---

## 5. 등급 판단 세부 기준

### +4등급 (탁월함)
- 공약 이행률 90% 이상
- 출석률 95% 이상
- 책임감 있는 리더로 인정
- 실패 시에도 책임지는 자세

### +3등급 (우수함)
- 공약 대부분 이행 (70-89%)
- 출석률 우수 (90% 이상)
- 직무에 충실
- 후속 조치 이행

### +2등급 (양호함)
- 공약 이행 노력 확인 (50-69%)
- 출석률 양호 (80% 이상)
- 기본적인 책임감
- 큰 문제 없음

### +1등급 (경미한 긍정)
- 기본적인 책임 이행
- 평균 수준의 공약 이행
- 특별한 문제 없음
- 무난한 평가

### -1등급 (경미한 부정)
- 일부 공약 미이행
- 출석률 저조한 경우 있음
- 책임 회피 경향
- 개선 필요

### -2등급 (일반 부정)
- 공약 이행률 저조 (30% 미만)
- 출석률 문제
- 무책임 비판
- 직무 태만 지적

### -3등급 (심각한 부정)
- 심각한 무책임
- 공약 대부분 파기
- 직무 유기 수준
- 다수의 비판

### -4등급 (최악)
- 직무 유기 확정
- 공약 완전 파기
- 책임 완전 회피
- 정치인 부적합

---

## 6. 평가 프로세스

### 입력 데이터
```
100개 풀링 데이터 (책임감 카테고리)
- Gemini 수집: 60개
- Perplexity 수집: 30개
- Grok 수집: 10개
```

### 평가 방법
1. **100개 풀링 데이터 전체 검토**
2. **각 데이터별 등급(+4 ~ -4) 부여**
3. **rating 필드에 숫자 문자열 기록 (예: "+3", "-2")**

### 평가 독립성
- 수집 AI와 평가 AI는 시점이 분리됨
- 각 평가 AI는 독립적으로 100개 전체 평가
- 자신이 수집한 데이터도 객관적으로 재평가

---

## 7. V30 기간 제한

### OFFICIAL 데이터: 최근 4년
```
유효 기간: 2022-01-14 ~ 2026-01-14
```

### PUBLIC 데이터: 최근 2년
```
유효 기간: 2024-01-14 ~ 2026-01-14
```

---

## 8. 주의사항 (Pitfalls)

1. **환경 변화 고려**: 외부 요인으로 공약 수정 불가피한 경우
2. **정량/정성 구분**: 이행률 수치와 질적 성과 함께
3. **대안 제시**: 불이행 시 대안 제시 여부
4. **출석률 맥락**: 해외 출장 등 정당한 사유

---

## 9. JSON 출력 형식

```json
{
  "items": [
    {
      "item_num": 1,
      "data_title": "간결한 제목",
      "data_content": "구체적 내용",
      "data_source": "출처명",
      "source_url": "https://...",
      "source_type": "OFFICIAL",
      "data_date": "2025-06-15",
      "rating": "+3"
    }
  ]
}
```

**핵심: rating 필드에 +4 ~ -4 숫자 문자열 기록!**
**예시: "+4", "+3", "+2", "+1", "-1", "-2", "-3", "-4"**

---

## 10. 체크리스트

- [ ] 100개 풀링 데이터 전체 평가
- [ ] 각 데이터에 rating(+4 ~ -4) 부여
- [ ] 등급 기준에 따른 일관된 평가
- [ ] 공약 이행률 수치 확인
- [ ] 환경 변화 맥락 고려
- [ ] rating은 숫자 문자열 (예: "+3", "-2")

---

**V30 책임감 평가 지침서 끝**
